[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/enemy/thugnon.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 31 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17, 10 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 240, 44, 240, -44, 0, 0 )

[node name="enemy" type="Node2D"]

[node name="enemy" type="KinematicBody2D" parent="."]
position = Vector2( 16, 32 )
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="enemy"]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="right" type="Area2D" parent="enemy"]
position = Vector2( 24, 40 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy/right"]
shape = SubResource( 3 )

[node name="left" type="Area2D" parent="enemy"]
position = Vector2( -24, 40 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy/left"]
shape = SubResource( 3 )

[node name="wall" type="Area2D" parent="enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy/wall"]
shape = SubResource( 4 )

[node name="vision" type="Area2D" parent="enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy/vision"]
position = Vector2( 0, -20 )
shape = SubResource( 5 )

[node name="Gun" type="Position2D" parent="enemy"]

[node name="reload" type="Timer" parent="enemy"]
one_shot = true
[connection signal="body_exited" from="enemy/right" to="enemy" method="_on_right_body_exited"]
[connection signal="body_exited" from="enemy/left" to="enemy" method="_on_left_body_exited"]
[connection signal="body_entered" from="enemy/wall" to="enemy" method="_on_wall_body_entered"]
[connection signal="body_entered" from="enemy/vision" to="enemy" method="_on_vision_body_entered"]
[connection signal="body_exited" from="enemy/vision" to="enemy" method="_on_vision_body_exited"]
[connection signal="timeout" from="enemy/reload" to="enemy" method="_on_reload_timeout"]
